--- a/.github/workflows/main_tech0-gen8-step4-pos-app-58.yml
+++ b/.github/workflows/main_tech0-gen8-step4-pos-app-58.yml
@@ -17,14 +17,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Python version
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
